Implemented structure for parsing gml